2011-12-12 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--layout-template-compile): Check path.

2011-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--root-directory): Remove ~/elisp
	support and migrate to ~/.emacs.d
	(epackage-package-name-valid-p): Correct regexp.
	(epackage--layout-template-info): (License): Add tag Custom.
	(epackage-info-mode-font-lock-keywords): Add Licence-Text.
	(epackage-info-mode-cmd-email-upstream-ping): New.
	(epackage--info-mode-email-ping-body): New.
	(epackage-info-mode-name): Rename. Was
	`epackage-info-mode-text'.
	(epackage--version-time): Add two dashes to variable name.
	(epackage--maintainer): Add two dashes to variable name.
	(epackage--url-doc-emacswiki): New.
	(epackage--info-mode-email-ping-subject): New.
	(epackage-mail-macro): Correct `lisp-indent-function' spec.
	(epackage-pkg-lint-directory-interactive): Add
	`epackage-initialize'.
	(epackage-pkg-lint-info-buffer-field-all): New.
	(epackage-pkg-lint-info-buffer-field-status): New.
	(epackage-pkg-lint-info-buffer-field-section): New.
	(epackage-pkg-lint-info-buffer-field-maintainer): New.
	(epackage-pkg-lint-finder-known-keywords): New.
	(epackage-pkg-lint-info-buffer-field-package): New.
	(epackage-devel-licence-list-http-parse): New.
	(epackage-devel-licence-list-http-get): New.
	(epackage-devel-licence-list-http-insert): New.
	(epackage--info-mode-license-list): New.
	(epackage-sources-list-kill-buffer): New.
	(epackage-sources-list-build): Call
	`epackage-sources-list-kill-buffer'.
	(epackage-initialize): Call `epackage-sources-list-build'
	only if needed.

2011-12-11 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-add-provide-to-file): New.
	(epackage-devel-generate-autoloads): Use
	`epackage-add-provide-to-buffer'.
	(epackage-devel-compose-package-dir): Use
	`epackage-add-provide-to-buffer'.
	(epackage-package-name-valid-p): New.
	(epackage-error-if-invalid-package-name): New.